@@ -1,0 +1,281 @@
+<!DOCTYPE html>
+<head>
+<script type='application/ld+json'>
+{"@context": "https://schema.org", "@graph": [{"@type": "Article", "headline": "\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f97\u4e3b\u97d3\u6c5f\uff1a\u7372\u734e\u5f8c\u7684\u5fc3\u8def\u6b77\u7a0b\u8207\u672a\u4f86\u5beb\u4f5c\u8a08\u756b", "description": "\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f97\u4e3b\u97d3\u6c5f\uff1a\u7372\u734e\u5f8c\u7684\u5fc3\u8def\u6b77\u7a0b\u8207\u672a\u4f86\u5beb\u4f5c\u8a08\u756b", "url": "https://www.famechos.me/news/\u8afe\u8c9d\u723e\u6587\u5b78\u734e\u5f97\u4e3b\u97d3\u6c5f\uff1a\u7372\u734e\u5f8c\u7684\u5fc3\u8def\u6b77\u7a0b\u8207\u672a\u4f86\u5beb\u4f5c\u8a08\u756b.html", "image": "https://www.famechos.me/images/banner.jpg", "datePublished": "2024-10-22T15:20:30.896757+08:00", "author": {"@type": "Person", "name": "Famechos"}, "publisher": {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me"}}, {"@type": "Organization", "name": "Famechos", "url": "https://www.famechos.me", "logo": "https://www.famechos.me/icons/favicon.png"}, {"@type": "WebSite", "name": "Famechos", "url": "https://www.famechos.me"}]}
+</script>
+<link rel="canonical" href="https://www.famechos.me/news/諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫.html"/>
+<meta name="description" content="諾貝爾文學獎得主韓江分享獲獎後的心路歷程，揭露未來寫作計畫，帶領讀者深入了解其文學世界。">
+
+<meta name="keywords" content="諾貝爾文學獎, 韓江, 獲獎, 心路歷程, 未來寫作計畫, 文學世界, 作家, 小說家">
+
+<link rel="stylesheet" href="../main-nav.css">
+<link rel="stylesheet" href="../main-content.css">
+<link rel="stylesheet" href="../main-small.css">
+<link rel="stylesheet" href="../post.css">
+<link rel="stylesheet" href="../main-footer.css">
+<link rel="stylesheet" href="../news.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanstc.css">
+        <meta property="og:url" content="https://www.famechos.me/news/諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫.html" />
+        <meta property="og:title" content="諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫" />
+        <meta property="og:description" content="諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫" />
+        <meta property="og:image" content="https://www.famechos.me/images/banner.jpg" />
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta property="twitter:title" content="諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫" />
+        <meta property="twitter:description" content="諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫" />
+        <meta property="twitter:image" content="https://www.famechos.me/images/banner.jpg" />
+<meta name="theme-color" content="white">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta property="og:locale" content="zh_TW" />
+        <meta property="og:site_name" content="Famechos" />
+<meta property="og:type" content="article" />
+<meta name="robots" content="index, follow" />
+<meta name="author" content="Famechos" />
+        <meta name="referrer" content="origin">
+<meta name="apple-mobile-web-app-capable" content="yes"/>
+        <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
+        <meta name="apple-mobile-web-app-title" content="Avoir"/>
+        <meta name="apple-touch-fullscreen" content="yes"/>
+        
+<style> * {box-sizing: border-box;margin: 0;padding: 0;font-family: 'Noto Sans TC', sans-serif;scroll-behavior: smooth;}</style>
+
+</head>
+
+<body>
+
+<nav class="nav">
+    <div class="nav-outerbox">
+      <div class="nav-inner-left">
+        <div class="nav-name-logo">
+          <a href="https://www.famechos.me/"><img class="famechos-logo" src="../img/famechos_logo.png"></a>
+         
+        </div>
+        <div class="nav-separate">
+          <p>|</p>
+        </div>
+        <div class="nav-type-1 nav-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="nav-type-btn1 nav-type-btn">
+          <h2 class="nav-type-text">K-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-2 nav-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="nav-type-btn2 nav-type-btn">
+          <h2 class="nav-type-text">J-POP</h2>
+        </button></a>
+ 
+        </div>
+        <div class="nav-type-3 nav-type"><a href="https://www.famechos.me/drama.html">
+          <button class="nav-type-btn3 nav-type-btn">
+          <h2 class="nav-type-text">影視</h2>
+        </button></a>
+         
+        </div>
+        <div class="nav-type-4 nav-type"><a href="https://www.famechos.me/others.html">
+          <button class="nav-type-btn4 nav-type-btn">
+          <h2 class="nav-type-text">其他</h2>
+        </button></a>
+        </div>  
+      </div>
+      <div class="nav-inner-right">
+        <div class="nav-feedback-outer"><a href="https://www.famechos.me/about_us.html">
+          <button class="feedback-btn nav-type-btn">
+            <h2 class="nav-type-text">關於我們</h2>
+          </button></a>
+        </div>
+        <div class="nav-setting"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="setting-btn nav-type-btn">
+            <h2 class="nav-type-text">私隱條款</h2>
+          </button></a>
+        </div>
+        <div class="nav-list">
+          <button id="list-btn" class="list-btn nav-type-btn">
+            <i class="bi bi-list"></i>
+          </button>
+        </div>
+
+      </div>
+
+      <div id="list" class="nav-list-outer">
+        <div class="nav-type-1 nav-type list-type"><a href="https://www.famechos.me/k-pop.html">
+          <button class="list-type-btn">
+          <p>K-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-2 nav-type list-type"><a href="https://www.famechos.me/j-pop.html">
+          <button class="list-type-btn">
+          <p>J-POP</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-3 nav-type list-type"><a href="https://www.famechos.me/drama.html">
+          <button class="list-type-btn">
+          <p>影視</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-4 nav-type list-type"><a href="https://www.famechos.me/others.html">
+          <button class="list-type-btn">
+          <p>其他</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-5 nav-type list-type"><a href="https://www.famechos.me/about_us.html">
+          <button class="list-type-btn">
+          <p>關於我們</p>
+          </button></a>
+        </div>
+
+        <div class="nav-type-6 nav-type list-type"><a href="https://www.famechos.me/privacy_policy.html">
+          <button class="list-type-btn">
+          <p>私隱條款</p>
+          </button></a>
+
+        </div>  
+
+      </div>
+     
+    </div>
+  </nav>
+
+
+  <main>
+    <div class="news-main-outer">
+      <div class="news-title-outer">
+        <h1>諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫</h1>
+</div>
+
+      <div class="news-content-outer">
+
+        <div class="news-info-outer">
+          <p class="news-content-type">K-Pop</p>
+          <p class="news-date">22/10/2024</p>
+        </div>
+<p>諾貝爾文學獎得主韓江在首爾的一個頒獎典禮上表示，過去一周的經歷令她感人至深，並希望繼續寫作，與讀者通過她的書籍見面。</p>
+<p>韓江自獲獎以來一直避免公開活動，但在這次頒獎典禮上，她罕見地公開露面。她回憶起當她第一次接到諾貝爾獎委員會的通知時，感到不真實，但在掛斷電話並查看媒體報導後，現實感才逐漸浮現。</p>
+<p>展望未來，韓江表示希望繼續做她一直在做的事情，即通過寫作與世界相連。她希望繼續寫作，與讀者在書中見面，並表示希望她的日常生活不會因為獎項而發生太大變化。</p>
+<p>韓江目前正在努力完成一部小說，這部小說她從春天就開始寫了。她希望能在明年上半年讓新書與讀者見面，但由於她對完成小說的時間預測一直是錯誤的，所以她很難確定具體的時間。</p><h2>韓江：思考未寫的小說是我最大的樂趣</h2>
+<p>韓江在Pony Chung創新獎的獲獎感言中分享了她的寫作習慣和喜好。她喜歡在閒暇時散步，思考她想寫的小說。</p>
+<p>韓江提到，她經常被問及作為一個不喝酒、不喝咖啡、很少旅行的人，她的快樂來源是什麼。她的答案是，她喜歡閱讀和思考未寫的小說。</p>
+<p>她說：“我試圖不錯過那些傑出的書籍，但我也喜歡我的書架，上面有我已經讀過的書和那些我還沒有讀過的書一起擺著。我喜歡與我親愛的家人和關心我的朋友分享笑聲和玩笑。”</p>
+<p>韓江的最愛是思考她想寫的小說。她重視構思尚未寫的小說的輪廓，按照她的思路寫下來，刪除那些冗長的部分，通過各種方式了解角色。</p>
+<p>她說：“當我真正開始寫作時，我不可避免地會迷失方向，並在轉角處意外地進入一個意想不到的領域。繞遠路最後完成作品的喜悅是巨大的。”</p>
+<p>即將滿54歲的韓江說，她希望在60歲之前專注於寫三本書。</p>
+<p>韓國作家韓江表示，未來六年她將專注於寫作目前在她腦海中醞釀的三本書。她希望在這個過程中，不會失去耐心和毅力，並能夠平衡地照顧她的日常生活。</p>
+<p>韓江在接受獎項時，對於三十年的讀者、出版商、書店老闆和員工、作家朋友以及家人和朋友表達了感謝。</p>
+<p>過去的Pony Chung Prize得主包括《魷魚遊戲》導演黃東赫、獲獎鋼琴家趙成珍和前聯合國秘書長潘基文。</p>
+<p>Pony Chung基金會以韓國企業家鄭世永的名字命名，成立於2005年，致力於支持人道主義研究項目。</p>
+<ul>
+<li>韓國敦促北韓立即從俄羅斯撤軍</li>
+<li>尹錫悅與北約秘書長通電話，討論北韓向俄羅斯派遣軍隊問題</li>
+<li>韓國考慮派遣人員前往烏克蘭監察北韓軍隊</li>
+</ul><h1>外交部召見俄羅斯駐韓大使 抗議北韓向俄羅斯派遣軍隊</h1>
+<p>韓國外交部召見俄羅斯駐韓大使，抗議北韓向俄羅斯派遣軍隊。據報導，北韓軍隊已經抵達俄羅斯，並與俄羅斯軍隊一起出現在烏克蘭戰場上。</p>
+<p>韓國政府對此表示強烈抗議，認為北韓的行為違反了聯合國安理會的決議，並且破壞了地區的和平與穩定。韓國外交部表示，將會繼續關注事態的發展，並與國際社會合作，共同應對北韓的挑釁行為。</p>
+<p>俄羅斯和北韓的合作引起了國際社會的關注，特別是在烏克蘭戰場上。兩國的軍隊一起出現在戰場上，引起了人們對於戰爭的擔憂。</p>
+<ul>
+<li>韓國外交部召見俄羅斯駐韓大使抗議北韓向俄羅斯派遣軍隊</li>
+<li>北韓軍隊已經抵達俄羅斯，並與俄羅斯軍隊一起出現在烏克蘭戰場上</li>
+<li>韓國政府對此表示強烈抗議，認為北韓的行為違反了聯合國安理會的決議</li>
+</ul>
+
+<p>資料來源：Yonhap News Agency</p>
+</div><div class ="news-vid-outer">
+<div class="related-vid-text-outer title-bar ">
+<p class="related-vid-text">相關影片：</p>
+</div>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/SaJjB3-cUNU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+<p class="news-text-inner">資料來源： YouTube</p>
+</div>
+
+
+ <div class ="related-news-outer title-bar">
+        <p class="related-news-text">相關新聞：</p>
+      </div>
+     
+      <div class ="related-news-box">
+        
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接.html">BTS成員鄭號錫退伍！18個月義務兵役結束，金碩珍前來迎接</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光.html">BTS成員Jin首張個人專輯《Happy》即將發行！英國搖滾樂風格主打歌曲《Running Wild》搶先曝光</a>
+        </p>
+                
+<p class ="related-news">
+          <i class="bi bi-dot"></i>
+          <a href="https://www.famechos.me/news/從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路.html">從挪威酒吧調酒師到K-pop詞曲作者：Elineelia Myreng的音樂夢想之路</a>
+        </p>
+                
+      </div>
+
+    </div>
+
+    </main>
+ <footer class="footer">
+    <div class="footer-outer">
+
+
+      <div class="footer-up-outer">
+        <div class="footer-right-name-box">
+          <a href="https://www.famechos.me/"><img class="famechos-logo-footer" src="../img/famechos_logo.png"></a>
+        </div>
+        <div class="footer-right-text-box">
+          <p class="footer-right-text">每日為你提供最新、最全面的日韓資訊。</p>
+        </div>
+        <div class="footer-button-box">
+          <button class="facebook-btn footer-btn">
+            <i class="bi bi-facebook footer-logo"></i>
+          </button>
+          <button class="ig-btn footer-btn">
+            <i class="bi bi-instagram footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-twitter-x footer-logo"></i>
+          </button>
+          <button class="x-btn footer-btn">
+            <i class="bi bi-envelope-fill footer-logo"></i>
+          </button>
+        </div>
+      </div>
+
+      <div class="footer-down-outer">
+        <div class="kpop-footer-box footer-box">
+          <a href="https://www.famechos.me/k-pop.html"><p class="footer-text">K-POP</p></a>
+        </div>
+        <div class="jpop-footer-box footer-box">
+          <a href="https://www.famechos.me/j-pop.html"><p class="footer-text">J-POP</p></a>
+        </div>
+        <div class="drama-footer-box footer-box">
+          <a href="https://www.famechos.me/drama.html"><p class="footer-text">影視</p></a>
+        </div>
+        <div class="other-footer-box footer-box">
+          <a href="https://www.famechos.me/others.html"><p class="footer-text">其他</p></a>
+        </div>
+
+
+      </div>
+
+      <div class="copyright-outer">
+        <p class="copyright-text">
+          Copyright © 2024 by <strong>Famechos.me</strong> All Rights Reserved.
+        </p>
+      </div>
+
+     
+    </div>
+
+
+
+  </footer>
+
+<script src="../nav-list.js"></script>
+
+</body>
+</html>
