@@ -350,4 +350,10 @@
     <ns0:changefreq>weekly</ns0:changefreq>
     <ns0:priority>0.90</ns0:priority>
   </ns0:url>
+<ns0:url>
+    <ns0:loc>https://www.famechos.me/news/諾貝爾文學獎得主韓江：獲獎後的心路歷程與未來寫作計畫.html</ns0:loc>
+    <ns0:lastmod>2024-10-22T15:20:59+08:00</ns0:lastmod>
+    <ns0:changefreq>weekly</ns0:changefreq>
+    <ns0:priority>0.90</ns0:priority>
+  </ns0:url>
 </ns0:urlset>
