@@ -52,3 +52,4 @@ https://tokyocheapo.com/entertainment/event-posts/tokyo-events-this-week-hallowe
 https://en.yna.co.kr/view/AEN20241017001052315?section=culture/k-pop&input=rss
 https://en.yna.co.kr/view/AEN20241017003400315?section=culture/k-pop&input=rss
 https://www.koreaherald.com/view.php?ud=20241020050138
+https://www.koreaherald.com/view.php?ud=20241014050581
